// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots dialogs/ebay-lightbox-dialog Always Opened 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
  >
    <p
      aria-hidden="true"
    >
      Some outside content...
    </p>
    <div
      aria-hidden="false"
    >
      <div
        aria-hidden="false"
        aria-labelledby="dialog-title-abc123"
        arial-modal="true"
        class="lightbox-dialog lightbox-dialog--mask-fade lightbox-dialog--show-init"
        role="dialog"
      >
        <div
          aria-hidden="true"
          class="keyboard-trap-boundary"
          tabindex="0"
        />
        <div
          aria-hidden="false"
          class="lightbox-dialog__window lightbox-dialog__window--fade keyboard-trap--active"
        >
          <div
            aria-hidden="true"
            class="keyboard-trap-boundary"
            tabindex="0"
          />
          <div
            class="lightbox-dialog__header"
          >
            <h2
              id="dialog-title-abc123"
            >
              Heading
            </h2>
            <button
              aria-label="Close dialog"
              class="icon-btn lightbox-dialog__close"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon icon--close-16"
                focusable="false"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="#icon-close-16"
                />
              </svg>
            </button>
          </div>
          <div
            class="lightbox-dialog__main"
          >
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
            <p>
              <a
                href="http://www.ebay.com"
              >
                www.ebay.com
              </a>
            </p>
          </div>
          <div
            aria-hidden="true"
            class="keyboard-trap-boundary"
            tabindex="0"
          />
        </div>
        <div
          aria-hidden="true"
          class="keyboard-trap-boundary"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots dialogs/ebay-lightbox-dialog Default 1`] = `
<DocumentFragment>
  <div>
    <button
      class="btn btn--secondary"
    >
      Open Dialog
    </button>
    <p>
      Some outside content...
    </p>
    <div>
      <div
        aria-labelledby="dialog-title-abc123"
        arial-modal="true"
        class="lightbox-dialog lightbox-dialog--mask-fade"
        hidden=""
        role="dialog"
      >
        <div
          class="lightbox-dialog__window lightbox-dialog__window--fade"
        >
          <div
            class="lightbox-dialog__header"
          >
            <h2
              id="dialog-title-abc123"
            >
              Heading
            </h2>
            <button
              aria-label="Close"
              class="icon-btn lightbox-dialog__close"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon icon--close-16"
                focusable="false"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="#icon-close-16"
                />
              </svg>
            </button>
          </div>
          <div
            class="lightbox-dialog__main"
          >
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
            <p>
              <a
                href="http://www.ebay.com"
              >
                www.ebay.com
              </a>
            </p>
          </div>
          <div
            class="lightbox-dialog__footer"
          >
            <button
              class="btn btn--primary"
            >
              OK
            </button>
            <button
              class="btn btn--secondary"
            >
              Cancel
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots dialogs/ebay-lightbox-dialog Disable Dialog Close 1`] = `
<DocumentFragment>
  <div>
    <button
      class="btn btn--secondary"
    >
      Show Dialog
    </button>
    <div>
      <div
        aria-labelledby="dialog-title-abc123"
        arial-modal="true"
        class="lightbox-dialog lightbox-dialog--mask-fade"
        hidden=""
        role="dialog"
      >
        <div
          class="lightbox-dialog__window lightbox-dialog__window--fade"
        >
          <div
            class="lightbox-dialog__header"
          >
            <h2
              id="dialog-title-abc123"
            >
              Heading
            </h2>
            <button
              aria-label="Close"
              class="icon-btn lightbox-dialog__close"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon icon--close-16"
                focusable="false"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="#icon-close-16"
                />
              </svg>
            </button>
          </div>
          <div
            class="lightbox-dialog__main"
          >
            <p>
              Unselect the following checkbox to prevent user to close the dialog
            </p>
            <span
              class="checkbox"
              style="align-items: center;"
            >
              <input
                checked=""
                class="checkbox__control"
                id="checkbox-closeable"
                type="checkbox"
              />
              <span
                class="checkbox__icon"
                hidden=""
              >
                <svg
                  aria-hidden="true"
                  class="checkbox__checked icon icon--checkbox-checked-18"
                  focusable="false"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <use
                    xlink:href="#icon-checkbox-checked-18"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="checkbox__unchecked icon icon--checkbox-unchecked-18"
                  focusable="false"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <use
                    xlink:href="#icon-checkbox-unchecked-18"
                  />
                </svg>
              </span>
            </span>
            <label
              class="field__label field__label--end"
              for="checkbox-closeable"
            >
              Enable closing dialog
            </label>
            <p>
              Normally, the dialog can be closed by either:
            </p>
            <ul>
              <li>
                clicking [X] icon on top of the dialog
              </li>
              <li>
                clicking OK button
              </li>
              <li>
                clicking the overlay or area outside the dialog
              </li>
              <li>
                Press Esc key on keyboard
              </li>
            </ul>
            <p />
          </div>
          <div
            class="lightbox-dialog__footer"
          >
            <button
              class="btn btn--secondary"
            >
              OK
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots dialogs/ebay-lightbox-dialog Mini Dialog 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
  >
    <p
      aria-hidden="true"
    >
      Some outside content...
    </p>
    <div
      aria-hidden="false"
    >
      <div
        aria-hidden="false"
        aria-labelledby="dialog-title-abc123"
        arial-modal="true"
        class="lightbox-dialog lightbox-dialog--mask-fade lightbox-dialog--show-init"
        role="dialog"
      >
        <div
          aria-hidden="true"
          class="keyboard-trap-boundary"
          tabindex="0"
        />
        <div
          aria-hidden="false"
          class="lightbox-dialog__window lightbox-dialog__window--fade lightbox-dialog__window--mini keyboard-trap--active"
        >
          <div
            aria-hidden="true"
            class="keyboard-trap-boundary"
            tabindex="0"
          />
          <div
            class="lightbox-dialog__header"
          >
            <h2
              id="dialog-title-abc123"
            />
            <button
              aria-label="Close"
              class="icon-btn lightbox-dialog__close"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon icon--close-16"
                focusable="false"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="#icon-close-16"
                />
              </svg>
            </button>
          </div>
          <div
            class="lightbox-dialog__main"
          >
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </p>
          </div>
          <div
            aria-hidden="true"
            class="keyboard-trap-boundary"
            tabindex="0"
          />
        </div>
        <div
          aria-hidden="true"
          class="keyboard-trap-boundary"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots dialogs/ebay-lightbox-dialog Scrolling Content 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
  >
    <p
      aria-hidden="true"
    >
      Some outside content...
    </p>
    <div
      aria-hidden="false"
    >
      <div
        aria-hidden="false"
        aria-labelledby="dialog-title-abc123"
        arial-modal="true"
        class="lightbox-dialog lightbox-dialog--mask-fade lightbox-dialog--show-init"
        role="dialog"
      >
        <div
          aria-hidden="true"
          class="keyboard-trap-boundary"
          tabindex="0"
        />
        <div
          aria-hidden="false"
          class="lightbox-dialog__window lightbox-dialog__window--fade keyboard-trap--active"
        >
          <div
            aria-hidden="true"
            class="keyboard-trap-boundary"
            tabindex="0"
          />
          <div
            class="lightbox-dialog__header"
          >
            <h2
              id="dialog-title-abc123"
            >
              Heading
            </h2>
            <button
              aria-label="Close"
              class="icon-btn lightbox-dialog__close"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon icon--close-16"
                focusable="false"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="#icon-close-16"
                />
              </svg>
            </button>
          </div>
          <div
            class="lightbox-dialog__main"
          >
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
            <p>
              <a
                href="http://www.ebay.com"
              >
                www.ebay.com
              </a>
            </p>
          </div>
          <div
            aria-hidden="true"
            class="keyboard-trap-boundary"
            tabindex="0"
          />
        </div>
        <div
          aria-hidden="true"
          class="keyboard-trap-boundary"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots dialogs/ebay-lightbox-dialog With Animation 1`] = `
<DocumentFragment>
  <div>
    <button
      class="btn btn--secondary"
    >
      Open Dialog
    </button>
    <p>
      Some outside content...
    </p>
    <div>
      <div
        aria-labelledby="dialog-title-abc123"
        arial-modal="true"
        class="lightbox-dialog lightbox-dialog--mask-fade"
        hidden=""
        role="dialog"
      >
        <div
          class="lightbox-dialog__window lightbox-dialog__window--fade"
        >
          <div
            class="lightbox-dialog__header"
          >
            <h2
              id="dialog-title-abc123"
            >
              Heading
            </h2>
            <button
              aria-label="Close"
              class="icon-btn lightbox-dialog__close"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon icon--close-16"
                focusable="false"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="#icon-close-16"
                />
              </svg>
            </button>
          </div>
          <div
            class="lightbox-dialog__main"
          >
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
            <p>
              <a
                href="http://www.ebay.com"
              >
                www.ebay.com
              </a>
            </p>
          </div>
          <div
            class="lightbox-dialog__footer"
          >
            <button
              class="btn btn--primary"
            >
              OK
            </button>
            <button
              class="btn btn--secondary"
            >
              Cancel
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots dialogs/ebay-lightbox-dialog With No Background Click 1`] = `
<DocumentFragment>
  <div>
    <button
      class="btn btn--secondary"
    >
      Open Dialog
    </button>
    <p>
      Some outside content...
    </p>
    <div>
      <div
        aria-labelledby="dialog-title-abc123"
        arial-modal="true"
        class="lightbox-dialog lightbox-dialog--mask-fade"
        hidden=""
        role="dialog"
      >
        <div
          class="lightbox-dialog__window lightbox-dialog__window--fade"
        >
          <div
            class="lightbox-dialog__header"
          >
            <h2
              id="dialog-title-abc123"
            >
              Heading
            </h2>
          </div>
          <div
            class="lightbox-dialog__main"
          >
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
            <p>
              <a
                href="http://www.ebay.com"
              >
                www.ebay.com
              </a>
            </p>
          </div>
          <div
            class="lightbox-dialog__footer"
          >
            <button
              class="btn btn--primary"
            >
              OK
            </button>
            <button
              class="btn btn--secondary"
            >
              Cancel
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots dialogs/ebay-lightbox-dialog With Previous Button 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
  >
    <p
      aria-hidden="true"
    >
      Some outside content...
    </p>
    <div
      aria-hidden="false"
    >
      <div
        aria-hidden="false"
        aria-labelledby="dialog-title-abc123"
        arial-modal="true"
        class="lightbox-dialog lightbox-dialog--mask-fade lightbox-dialog--show-init"
        role="dialog"
      >
        <div
          aria-hidden="true"
          class="keyboard-trap-boundary"
          tabindex="0"
        />
        <div
          aria-hidden="false"
          class="lightbox-dialog__window lightbox-dialog__window--fade keyboard-trap--active"
        >
          <div
            aria-hidden="true"
            class="keyboard-trap-boundary"
            tabindex="0"
          />
          <div
            class="lightbox-dialog__header"
          >
            <button
              aria-label="Previous"
              class="lightbox-dialog__prev icon-btn"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon icon--chevron-left-16"
                focusable="false"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="#icon-chevron-left-16"
                />
              </svg>
            </button>
            <h2
              id="dialog-title-abc123"
            >
              Heading
            </h2>
            <button
              aria-label="Close dialog"
              class="icon-btn lightbox-dialog__close"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon icon--close-16"
                focusable="false"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="#icon-close-16"
                />
              </svg>
            </button>
          </div>
          <div
            class="lightbox-dialog__main"
          >
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
            <p>
              <a
                href="http://www.ebay.com"
              >
                www.ebay.com
              </a>
            </p>
          </div>
          <div
            aria-hidden="true"
            class="keyboard-trap-boundary"
            tabindex="0"
          />
        </div>
        <div
          aria-hidden="true"
          class="keyboard-trap-boundary"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots dialogs/ebay-lightbox-dialog With Wide Size 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
  >
    <p
      aria-hidden="true"
    >
      Some outside content...
    </p>
    <div
      aria-hidden="false"
    >
      <div
        aria-hidden="false"
        aria-labelledby="dialog-title-abc123"
        arial-modal="true"
        class="lightbox-dialog lightbox-dialog--mask-fade lightbox-dialog--wide lightbox-dialog--show-init"
        role="dialog"
      >
        <div
          aria-hidden="true"
          class="keyboard-trap-boundary"
          tabindex="0"
        />
        <div
          aria-hidden="false"
          class="lightbox-dialog__window lightbox-dialog__window--fade keyboard-trap--active"
        >
          <div
            aria-hidden="true"
            class="keyboard-trap-boundary"
            tabindex="0"
          />
          <div
            class="lightbox-dialog__header"
          >
            <button
              aria-label="Previous"
              class="lightbox-dialog__prev icon-btn"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon icon--chevron-left-16"
                focusable="false"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="#icon-chevron-left-16"
                />
              </svg>
            </button>
            <h2
              id="dialog-title-abc123"
            >
              Heading
            </h2>
            <button
              aria-label="Close dialog"
              class="icon-btn lightbox-dialog__close"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="icon icon--close-16"
                focusable="false"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  xlink:href="#icon-close-16"
                />
              </svg>
            </button>
          </div>
          <div
            class="lightbox-dialog__main"
          >
            <p>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </p>
            <p>
              <a
                href="http://www.ebay.com"
              >
                www.ebay.com
              </a>
            </p>
          </div>
          <div
            aria-hidden="true"
            class="keyboard-trap-boundary"
            tabindex="0"
          />
        </div>
        <div
          aria-hidden="true"
          class="keyboard-trap-boundary"
          tabindex="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
